themes/foodiepro-2.1.8/style.css
/* ... */
/* Recipes, Blog & Archive Pages
--------------------------------------------- */

/* Top section commons */

.top, .bottom {
	float:left;
	padding:10px;
	margin-top:0; /* P.O. Original none */
	width:100%;
	margin-bottom:40px;
}

.top.before-content {
    margin-bottom: 0px;
}

.bottom {
	margin-top:40px; 
}

.top .widget ul,
.bottom .widget ul {
	list-style-type:none;
}

.archives-top .textwidget ul li,
.archives-top .dropdown-select {
	width:100%;
	text-align:center;
	height:40px;
}

/* Recipes & Blogs Top section */
/* Archive pages Top section */
.recipes-top .widget,
.blogs-top .widget,
.archives-top .widget {
	width:33.3%;
	padding:0px 10px;
	max-width: 215px;	
	float:left;
}

.alignright.widget {
	float:right;
}

/* Archives bottom section */
.archives-bottom .widget  {
	width:50%;
	padding:0px 10px;
	max-width: 300px;	
	float:left;
}

.archives-top .widget-wrap  {
	width:100%;
	margin-top:auto;
	margin-bottom:auto;
}

/* Themes widget on archive, blogs & recipes top 
----------------------------------------------------*/

.recipes-top .widget.themes ul li, 
.blogs-top .widget.themes ul li {
  float:left;
	width:45%;
  margin:5px;
}

.recipes-top .widget.themes ul li.current-menu-item > a,
.blogs-top .widget.themes ul li.current-menu-item > a {
	color:#444;
}

.recipes-top .widget_text.themes, 
.blogs-top .widget_text.themes {
	margin-bottom:0;
	padding-left:10px;
	padding-top:8px;
}


/*
Top Ad
---------------------------------------------------------------------------------------------------- */

.before-header {
	background:#f5f5f5;
	clear:both;
	overflow:hidden;
	padding:10px 0;
	text-align:center;
}

.before-header img,
.before-header iframe {
	display:block;
	margin:0 auto;
}

.before-header .widget {
	margin:0 auto;
	max-width:1100px;
}

/*
Site Header
---------------------------------------------------------------------------------------------------- */


.foodie-pro .site-header {
  position:fixed;
  top:0;
	transition: top 0.2s ease-in-out;  
 	z-index: 99999;  
  margin:0;
  padding:0;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.foodie-pro .header-inner {
  background-position: left;
  padding: 0 20px 0px 20px;
  margin: 0 auto;
  /*max-width: 1060px;*/
  max-width: 1140px;
}


/* Title Area
--------------------------------------------- */
.home-page .header-widget-area {
	width:400px; 
	height:300px;
    -webkit-transition: height 0.2s ease-in-out; /* Safari */
    transition: height 0.2s ease-in-out;    	
}

.title-area,
.site-title,
.site-title a,
.home-page .nav-up .title-area,
.home-page .nav-up .site-title,
.home-page .nav-up .site-title a {
	float:left;
	width:300px; 
	height:100px; 
	padding: 0 15px;
	text-indent:-9999px;
    background-size: contain!important;	
    -webkit-transition: height 0.2s ease-in-out; /* Safari */
    transition: height 0.2s ease-in-out;   	
}

.home-page .title-area,
.home-page .site-title,
.home-page .site-title a {
	width:450px; 
	height: 300px;
	padding: 0 20px; 
}

.home-page .nav-up .header-widget-area { 
	height: 100px;
}


/* Added P.O. Vertical centering and header height */
.title-area {
  margin:5px 0;
}

.home-page .title-area {
  /*margin:10px 0;*/
}

.title-area h1 {
	margin:0 auto;
}

.title-area p {
	margin:0;
}

.site-title,
.site-title a {
	font-size:55px;
	font-weight:300;
	letter-spacing:4px;
	line-height:1.2;
	text-align:center;
	text-decoration:none;
	text-transform:uppercase;
}

.site-title a,
.site-title a:hover {
	color:#444;
}

.site-description {
	color:#999;
	font-size:11px;
	font-style:italic;
	font-weight:400;
	letter-spacing:.5px;
	margin:0;
	text-align:center;
	text-transform:none;
}

/* Full width header, no widgets */

.header-full-width .title-area,
.header-full-width .site-title {
	width:100%;
}

.header-image .site-description,
.header-image .site-title a {
	display:block;
	text-indent:-9999px;
}

/* Logo, hide text */


/* .header-image only appears when no written site title is used */
.header-image .site-header {
	background-position:center !important; /* P.O. Original center */
	background-size:400px 170px !important;  /* P.O. Original 400px 170px */
}

.header-image .site-title a {
	float:none;
	min-height:130px; /* P.O. Original 164px */
	width:100%;
}


/* Site Navigation
--------------------------------------------- */

nav.nav-primary .wrap {
	/* Allows profile avatar to go outside the menu bar */
	overflow:visible;
}




/* Header Widget Area & widgets
--------------------------------------------- */


.site-header .widget-area {
	float:right;
	text-align:right;
	margin:auto;
	width:400px; /* P.O. Original 720px */
	/*height:130px;  P.O. Original empty */
	display:-webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
	display:-moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
	display:-ms-flexbox;      /* TWEENER - IE 10 */
	display:-webkit-flex;  	
	display: flex;
}

.header-image .site-header .widget-area {
	padding:0px 0; /* P.O. Original 20px 0 */
}

.site-header .widget_search {
	width:100%;
	padding-right:20px;
	padding-top: 24px;
	margin:auto;
}

.home .site-header .widget_search {
	padding-top: 0;
}

.search-form input {
	font-size:13px;
	border-radius:10px;
	height: 50px;
}

/* Last registered widget */
.avatar-block {
	float: left;
	width: 100%;
	text-align: center;  
}

.item-avatar {
  margin: 3px;
  display: inline-block;
}
/* ... */

